bindings/python/sop/libjsondb_amd64linux.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package command-line-arguments */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "jsondb.ai.go"

#include <stdlib.h>

#line 1 "cgo-generated-wrapper"

#line 3 "jsondb.btreegetters.go"

#include <stdlib.h>

#line 1 "cgo-generated-wrapper"

#line 3 "jsondb.main.go"

#include <stdio.h> // C.longlong
#include <stdlib.h> // For free

#line 1 "cgo-generated-wrapper"

#line 3 "jsondb.managebtree.go"

#include <stdlib.h> // For free

#line 1 "cgo-generated-wrapper"

#line 3 "jsondb.search.go"

#include <stdlib.h>

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern char* manageVectorDB(long long ctxID, int action, char* targetID, char* payload);
extern char* manageModelStore(long long ctxID, int action, char* targetID, char* payload);
extern char* navigateBtree(long long ctxID, int action, char* payload, char* payload2);
extern char* isUniqueBtree(char* payload);

/* Return type for getFromBtree */
struct getFromBtree_return {
	char* r0;
	char* r1;
};
extern struct getFromBtree_return getFromBtree(long long ctxID, int action, char* payload, char* payload2);
extern void getFromBtreeOut(long long ctxID, int action, char* payload, char* payload2, char** result, char** error);

/* Return type for getBtreeItemCount */
struct getBtreeItemCount_return {
	long long r0;
	char* r1;
};
extern struct getBtreeItemCount_return getBtreeItemCount(char* payload);
extern void getBtreeItemCountOut(char* payload, long long* count, char** error);
extern long long createContext();
extern void cancelContext(long long ctxID);
extern void removeContext(long long ctxID);
extern char* contextError(long long ctxID);

// Redis global connection management related.
//
extern char* openRedisConnection(char* uri);
extern char* closeRedisConnection();
extern char* openCassandraConnection(char* payload);
extern char* closeCassandraConnection();
extern char* manageLogging(int level, char* logPath);
extern char* manageTransaction(long long ctxID, int action, char* payload);
extern char* manageDatabase(long long ctxID, int action, char* targetID, char* payload);
extern void freeString(char* cString);
extern char* manageBtree(long long ctxID, int action, char* payload, char* payload2);
extern char* manageSearch(long long ctxID, int action, char* targetID, char* payload);

#ifdef __cplusplus
}
#endif